--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,6 +9,11 @@
     <%= f.input :location %>
     <%= f.input :title %>
     <%= f.input :about_me %>
+	<p>
+		Expertise:
+	</p>
+		<%= f.collection_check_boxes :skill_ids, Skill.all, :id, :name, 
+		{:item_wrapper_class => 'checkbox_container'} %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
