--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,34 +1,27 @@
-<h1>Listing projects</h1>
+<%= render 'pages/home' %>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Length</th>
-    <th>Project type</th>
-    <th>Hometown</th>
-    <th>Details</th>
-    <th>Startdate</th>
-    <th>Schedule info</th>
-    <th>User</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+<h1>Current projects</h1>
 
-<% @projects.each do |project| %>
-  <tr>
-    <td><%= project.name %></td>
-    <td><%= project.length %></td>
-    <td><%= project.project_type %></td>
-    <td><%= project.hometown %></td>
-    <td><%= project.details %></td>
-    <td><%= project.startdate %></td>
-    <td><%= project.schedule_info %></td>
-    <td><%= link_to 'Show', project %></td>
-    <td><%= link_to 'Edit', edit_project_path(project) %></td>
-    <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+<table class="table table-striped">
+	<thead>
+  		<tr>
+    		<th>Name</th>
+    		<th>Length</th>
+    		<th>Project type</th>
+    		<th>Hometown</th>
+    		<th>Details</th>
+    		<th>Startdate</th>
+    		<th>Schedule info</th>
+    		<th></th>
+    		<th></th>
+    		<th></th>
+  		</tr>
+	</thead>
+
+
+	<tbody>
+		<%= render @projects %>
+	</tbody>
 </table>
 
 <br />
