--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -42,6 +42,8 @@
   <% end %>
 </ul>
 
+<% if current_user == @project.user %>
+	<%= link_to 'Edit', edit_project_path(@project) %> |
+<% end %>
 
-<%= link_to 'Edit', edit_project_path(@project) %> |
-<%= link_to 'Back', projects_path %>
+<%= link_to 'Back', session[:return_to] %>
