--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -1,6 +1,34 @@
-<% if user_signed_in? %> 
-	<div class="center hero-unit">
-    	<h1>My Projects </h1>
+<div class="center hero-unit">
+	<h1>My Profile </h1>
+	
+	<p>
+	  <b>Name:</b>
+	  <%= @profile.name %>
+	</p>
+ 	<p>
+	  <b>email:</b>
+	  <%= @profile.email %>
+	</p>
+	  <b>Location:</b>
+	  <%= @profile.location %>
+	</p>
+	  <b>Title:</b>
+	  <%= @profile.title %>
+	</p>
+	  <b>About Me:</b>
+	  <%= @profile.about_me %>
+	</p>
+
+	<b>My skills</b>
+	<ul>
+	  <% @profile.skills.each do |skill| %>
+	    <li><%= skill.name %></li>
+	  <% end %>
+	</ul>
+	<%= link_to 'Edit Profile', edit_user_registration_path %>
+	<%= link_to 'Search Projects', dashboard_search_projects_path %>
+	
+		<h1>My Projects </h1>
 		
 		<table class="table table-striped">
 			<thead>
@@ -22,8 +50,7 @@
 				<%= render @projects %>
 			</tbody>
 		</table>
-		
+			<%= link_to 'New Project', new_project_path %>
 		</p>
+		<%= link_to 'Show Qualified Candidates', dashboard_search_users_path %>
 	</div>
-	<%= link_to 'New Project', new_project_path %>
-<% end %>
