--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -25,7 +25,7 @@
 	    <li><%= skill.name %></li>
 	  <% end %>
 	</ul>
-	<%= link_to 'Edit Profile', edit_user_registration_path %>
+	<%= link_to 'Edit Profile', controller: "users", action: "edit", id: current_user.id %>
 	<%= link_to 'Search Projects', dashboard_search_projects_path %>
 	
 		<h1>My Projects </h1>
