--- a/app/views/dashboard/search_users.html.erb
+++ b/app/views/dashboard/search_users.html.erb
@@ -19,6 +19,7 @@
 		  <td><%= user.email %></td>
 		  <td><%= user.title %></td>
 		  <td><%= user.location %></td>
+		  <td><%= link_to 'Show', controller: "users", action: "show", id: user.id %></td>
 		</tr>
 		<% end %>
 	</tbody>
