--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,19 +1,10 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Edit Account Info</h2>
 
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.input :email, :required => true, :autofocus => true %>
-    <%= f.input :name %>
-    <%= f.input :location %>
-    <%= f.input :title %>
-    <%= f.input :about_me %>
-	<p>
-		Expertise:
-	</p>
-		<%= f.collection_check_boxes :skill_ids, Skill.all, :id, :name, 
-		{:item_wrapper_class => 'checkbox_container'} %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
