--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
 
             <% if user_signed_in? %>
 			    <li><%= link_to "My Dashboard", dashboard_home_path %></li>
-				<li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+				<li><%= link_to "Edit Account", edit_user_registration_path  %></li>
 				<li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
 
 			<% else %>
