--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -3,9 +3,11 @@
 
   <div class="form-inputs">
     <%= f.input :name %>
-    <%= f.input :length %>
-    <%= f.input :project_type %>
-    <%= f.input :hometown %>
+    <%= f.input :length, priority: [ "Feature" ], collection: [ "Feature",
+	 	"TV Pilot", "Episode", "Short", "Spot" ], :include_blank => false %>
+    <%= f.input :project_type, priority: [ "Fiction" ], collection: [ "Fiction", 
+	 	"Nonfiction", "Art/Experimental"], :include_blank => false %>
+	<%= f.input :hometown %>
     <%= f.input :details %>
     <%= f.input :startdate %>
     <%= f.input :schedule_info %>
